<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.maciej.mytask.DescriptionActivity">

    <TextView
        android:id="@+id/nameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/titleLabel"
        android:layout_centerHorizontal="true"
        android:hint="@string/name" />

    <Button
        android:id="@+id/doneBtn"
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="doneClicked"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/instructionText"
        android:layout_alignRight="@+id/dateText"
        android:layout_alignEnd="@+id/dateText" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/description"
        android:layout_below="@+id/nameText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/titleLabel"
        android:text="@string/task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:padding="20dp"
        android:layout_below="@+id/descriptionText"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/deleteBtn"
        android:text="@string/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:onClick="deleteClicked"
        android:layout_alignBaseline="@+id/doneBtn"
        android:layout_alignBottom="@+id/doneBtn"
        android:layout_alignLeft="@+id/dateText"
        android:layout_alignStart="@+id/dateText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/instruction"
        android:id="@+id/instructionText"
        android:textSize="11dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>